Fixed Image padding in cards causing whitespace.
Removed the padding from cards around the images so that the images
fit nicely into the cards and there is no whitespace on the left.

--- a/boldr/src/components/problems/ProblemItem.module.css
+++ b/boldr/src/components/problems/ProblemItem.module.css
@@ -83,5 +83,8 @@
 
 
 .noPadding {
+  margin: 0;
   padding: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
